Add classes for active links and sections

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -42,3 +42,11 @@ button {
   margin: 0 auto;
   padding-inline: $gutter * 2;
 }
+
+section {
+  display: none;
+
+  &.active {
+    display: block;
+  }
+}
