--- a/src/sass/partials/_navigation.scss
+++ b/src/sass/partials/_navigation.scss
@@ -18,4 +18,9 @@
   font-weight: 700;
   color: $clr-light;
   padding: $gutter * 2 $gutter * 3;
+  transition: all 0.5s;
+
+  &.active {
+    color: $clr-primary;
+  }
 }
