import mixins into main stylesheet

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'partials/variables';
+@import 'partials/mixins';
 @import 'partials/global';
 @import 'partials/navigation';
 @import 'partials/splash';
