Import finder stylesheet file

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,4 +4,5 @@
 @import 'partials/navigation';
 @import 'partials/splash';
 @import 'partials/card';
+@import 'partials/finder';
 @import 'partials/footer';
