--- a/src/sass/partials/_navigation.scss
+++ b/src/sass/partials/_navigation.scss
@@ -11,11 +11,9 @@
 }
 
 .nav__link {
+  @include text-format(1.1rem, 1, 700);
   text-decoration: none;
   text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 1.1rem;
-  font-weight: 700;
   color: $clr-light;
   padding: $gutter * 2 $gutter * 3;
   transition: all 0.5s;
