Add styles for start/end points

--- a/src/sass/partials/_finder.scss
+++ b/src/sass/partials/_finder.scss
@@ -21,5 +21,9 @@
 
   &.active {
     background-color: $clr-primary;
+
+    &.start-end {
+      background-color: darken($clr-primary, 20%);
+    }
   }
 }
