Add error color variable

--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -6,5 +6,6 @@ $clr-light: #fff;
 $clr-dark: #0F0E0E;
 $clr-primary: #E8630A;
 $clr-secondary: #B4FF9F;
+$clr-error: #B20600;
 //fonts
 $font-main: 'Assistant', sans-serif;
