import toast styles into main stylesheet

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import 'partials/variables';
 @import 'partials/mixins';
 @import 'partials/global';
+@import 'partials/toast';
 @import 'partials/navigation';
 @import 'partials/splash';
 @import 'partials/card';
