--- a/src/sass/partials/_splash.scss
+++ b/src/sass/partials/_splash.scss
@@ -1,7 +1,7 @@
 .splash {
   padding-block: $gutter * 6;
   display: flex;
-  height: 50vh;
+  // height: 50vh;
   flex-direction: column;
   width: min-content;
   margin: 0 auto;
