Add imports for media stylesheets

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,3 +7,6 @@
 @import 'partials/card';
 @import 'partials/finder';
 @import 'partials/footer';
+@import 'media/card-media';
+@import 'media/global-media';
+@import 'media/splash-media.scss';
