--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -25,11 +25,11 @@ body {
   font-family: $font-main;
   color: $clr-light;
   background-color: $clr-dark;
-  background-image: url('../../images/background.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('../../images/background.jpg');
   background-repeat: no-repeat;
   background-position: top;
-  background-size: cover;
-  background-size: 100% 100vh;
+  background-size: cover, 100% 100vh;
 }
 
 input,
