Import media stylesheets

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,4 +9,6 @@
 @import 'partials/footer';
 @import 'media/card-media';
 @import 'media/global-media';
-@import 'media/splash-media.scss';
+@import 'media/splash-media';
+@import 'media/finder-media';
+@import 'media/navigation-media';
