Add imports for new stylesheets

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,8 +7,9 @@
 @import 'partials/card';
 @import 'partials/finder';
 @import 'partials/footer';
+@import 'partials/rules';
 @import 'media/card-media';
 @import 'media/global-media';
 @import 'media/splash-media';
 @import 'media/finder-media';
-@import 'media/navigation-media';
+@import 'media/rules-media';
