--- a/src/sass/partials/_finder.scss
+++ b/src/sass/partials/_finder.scss
@@ -18,7 +18,6 @@
 }
 
 .grid-element {
-  // flex-basis: 10%;
   border: 2px solid $clr-light;
 
   &.active {
@@ -36,4 +35,10 @@
       background-color: $clr-secondary;
     }
   }
+}
+
+.buttons-box {
+  display: flex;
+  margin: 0 auto;
+  max-width: 500px;
 }
