Add styles for clickable cells

--- a/src/sass/partials/_finder.scss
+++ b/src/sass/partials/_finder.scss
@@ -20,6 +20,10 @@
 .grid-element {
   border: 2px solid $clr-light;
 
+  &.clickable {
+    background-color: rgba($clr-primary, 0.3 );
+  }
+
   &.active {
     background-color: $clr-primary;
 
