Add different cursor for buttons

--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -65,11 +65,11 @@ section {
 .btn-primary {
   @include text-format(1rem, 0.5, 700);
   padding: $gutter * 0.5 $gutter * 1.5;
+  cursor: pointer;
   display: flex;
   max-width: 200px;
   background : $clr-primary;
   color: $clr-light;
   text-transform: uppercase;
-  margin: 0 auto;
   border: 0;
 }
