Add styles for summary popup

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'partials/finder';
 @import 'partials/footer';
 @import 'partials/rules';
+@import 'partials/summary';
 @import 'media/card-media';
 @import 'media/global-media';
 @import 'media/splash-media';
