Modify structure of the code to avoid stylelint errors

--- a/src/sass/partials/_rules.scss
+++ b/src/sass/partials/_rules.scss
@@ -14,13 +14,13 @@
   padding-block: $gutter;
   display: none;
 
-  & > .btn-primary {
-    margin: 0 auto;
-  }
-
   &.active {
     display: block;
   }
+}
+
+.rules .btn-primary {
+  margin: 0 auto;
 }
 
 .rules__title {
