--- a/src/sass/partials/_rules.scss
+++ b/src/sass/partials/_rules.scss
@@ -44,12 +44,12 @@
 
 .rules__img {
   min-width: 200px;
+}
 
-  & .image {
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-  }
+.image {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
 }
 
 .rules__container {
