Improve design for very small screen sizes below 375px and add different cursor for path cells

--- a/src/sass/media/_card-media.scss
+++ b/src/sass/media/_card-media.scss
@@ -51,3 +51,18 @@
   }
 }
 
+@media (max-width: 376px) {
+  .card__image {
+    height: 175px;
+    width: 250px;
+  }
+
+  .content__title {
+    @include text-format(1.25rem, 1, 700);
+  }
+
+  .content__subtitle {
+    @include text-format(0.8rem, 0, 400);
+  }
+}
+
