--- a/src/sass/partials/_finder.scss
+++ b/src/sass/partials/_finder.scss
@@ -19,6 +19,7 @@
 
 .grid-element {
   border: 2px solid $clr-light;
+  cursor: pointer;
 
   &.clickable {
     background-color: rgba($clr-primary, 0.3 );
