--- a/src/sass/media/_card-media.scss
+++ b/src/sass/media/_card-media.scss
@@ -57,6 +57,16 @@
     width: 250px;
   }
 
+  .card__content {
+    &--left {
+      transform: translateX(5%);
+    }
+
+    &--right {
+      transform: translateX(-5%);
+    }
+  }
+
   .content__title {
     @include text-format(1.25rem, 1, 700);
   }
