--- a/src/sass/media/_splash-media.scss
+++ b/src/sass/media/_splash-media.scss
@@ -26,7 +26,7 @@
 
 @media (max-width: 576px) {
   .splash {
-    padding-block: $gutter * 3;
+    padding-block: $gutter * 3 $gutter * 4;;
   }
 
   .logo-title {
