--- a/src/sass/partials/_finder.scss
+++ b/src/sass/partials/_finder.scss
@@ -15,6 +15,10 @@
   aspect-ratio: 1;
   max-width: 500px;
   max-height: 500px;
+
+  &.update {
+    animation: compute-grid 1s ease-in-out;
+  }
 }
 
 .grid-element {
@@ -47,4 +51,18 @@
   justify-content: space-around;
   margin: 0 auto;
   max-width: 500px;
+}
+
+@keyframes compute-grid {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.4;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
