Add styles for side nav

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'partials/footer';
 @import 'partials/rules';
 @import 'partials/summary';
+@import 'partials/side-nav';
 @import 'media/card-media';
 @import 'media/global-media';
 @import 'media/splash-media';
