--- a/src/sass/partials/_global.scss
+++ b/src/sass/partials/_global.scss
@@ -74,3 +74,10 @@ section {
   text-transform: uppercase;
   border: 0;
 }
+
+.buttons-box {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  max-width: 500px;
+}
